--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -39,6 +39,9 @@ button {
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  
+  transition: transform 0.3s ease-in, opacity 0.3s ease;
+  transform: translate(-50%, -150%);
 }
 .popup-modal p {
   margin-bottom: 24px
@@ -55,9 +58,10 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  
+  transform: translate(-50%, -50%);
 }
 
 .backdrop.show {
   opacity: 30%;
 }
-
